Add reboot script as "example" and document usage

--- a/examples/alertmanager.conf
+++ b/examples/alertmanager.conf
@@ -1,8 +1,19 @@
+global:
+  smtp_smarthost: mail.example.com:25
+  smtp_from: prometheus@example.com
+
 route:
   receiver: 'default'
-  repeat_interval: 5s
+  routes:
+  - receiver: 'executor'
+    match:
+      alertname: RebootMachine
 
 receivers:
 - name: 'default'
+  email_configs:
+  - to: ops@example.com
+
+- name: 'executor'
   webhook_configs:
   - url: http://localhost:8080
