proper docker image specification

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: ubuntu/bionic
+      - image: ubuntu:bionic
 
     steps:
       - checkout
@@ -13,7 +13,7 @@ jobs:
 
   test:
     docker:
-      - image: ubuntu/bionic
+      - image: ubuntu:bionic
 
     steps:
       - checkout
